WEBPACK CONFIGURED FOR HTML FILE

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div class="logo"></div>
-    <div id="main">SKEDDIAMO</div>
+    <div id="main">SKEDDIAMO?!</div>
   </body>
 </html>
