--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <div class="logo"></div>
-    <div id="main">SKEDDIAMO?!</div>
+    <div id="main"></div>
   </body>
 </html>
